<resources>

    <string name="app_name">Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="button_start_new_activity">Start a new activity</string>
    
    <!-- common text -->
    <string name="text_click_me">Click me!</string>
    <string name="text_enable">Enable</string>
    <string name="text_disable">Disable</string>
    
    <!--  -->
    <string name="activity_sample_code">Anmin Demos</string>
    
    <string name="activity_config_change">Activity/Config change</string>
    <string name="text_message">common message</string>
    
    <string name="activity_lru_cache">Util/LRU cache</string>
    
    <string name="activity_screen_config">Resources/Screen config</string>
    <string name="text_screen_density">Screen density is %1$s</string>
    <string name="text_screen_category">Screen category is %1$s</string>
    
    <string name="activity_sliding_drawer">View/Sliding drawer</string>
    <string name="text_sliding_drawer">There is a Sliding drawer here!</string>
    <string name="text_sliding_drawer_content">This is Sliding drawer content.</string>
    
    <string name="activity_drag_drop_color">View/Drag drop color</string>
    <string name="text_red">red</string>
    <string name="text_green">green</string>
    <string name="text_blue">blue</string>
    <string name="text_yellow">yellow</string>
    
    <string name="activity_expandable_list_view">View/Expandable ListView</string>
    <string name="activity_expandable_list_view2">View/Expandable ListView2</string>
    <string name="text_fold_unfold">fold/unfold</string>
    <string name="activity_expandable_list_view3">View/Expandable ListView3</string>
    <string name="activity_custom_sliding_drawer">View/Custom Sliding Drawer</string>
    <string name="activity_side_bar_scroll_view">View/Side Bar Scroll View</string>
    
    <string name="activity_sticky_header_list_view">View/Sticky Header ListView</string>
    
    <string name="activity_move_in_touch">View/Move in Touch</string>
    <string name="text_move_left">move left</string>
    <string name="text_move_right">move right</string>
    <string name="text_move_up">move up</string>
    <string name="text_move_down">move down</string>
    <string name="activity_edit_text">View/EditText</string>
    
    <string name="activity_intercept_dispatch_draw">Framework/Intercept Dispatch Draw</string>
    <string name="activity_view_measure">Framework/Measure View</string>
    <string name="text_show_hidden_view">Show hidden view</string>
    <string name="activity_view_callback">Framework/View Callback</string>
    <string name="activity_context_menu">Framework/Context menu</string>
    <string name="activity_popup_window">Framework/PopupWindow</string>
    <string name="text_show_popup_window">Show</string>
    <string name="activity_bitmap">Framework/Bitmap</string>
    
    <string name="activity_another_expandable_list_view">Other/Expandable ListView</string>
    
</resources>