<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <View
        android:id="@android:id/background"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/red"/>

    <TextView 
        android:id="@+id/textview_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/text_red"/>
    
    <TextView 
        android:id="@+id/textview_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/text_blue"/>
    
    <TextView 
        android:id="@+id/textview_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/text_green"/>
    
    <TextView 
        android:id="@+id/textview_yellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/text_yellow"/>
</LinearLayout>